# moult

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: moult.cpp  moult_review.cpp  moult_review.hpp
cmake/: moult-core-config.cmake.in
docs/: architecture.md  building_engines.md  clang_adapter_contract.md
examples/: minimal_engine.cpp
include/moult/clang/: adapter.hpp
include/moult/core/: api.hpp  capsule.hpp  diagnostics.hpp  edits.hpp  engine.hpp  evidence.hpp  facts.hpp  json.hpp  plan.hpp  serializers.hpp  source.hpp  transpiler.hpp  types.hpp
include/moult/cpp/: modernization.hpp
src/: capsule.cpp  diagnostics.cpp  edits.cpp  engine.cpp  evidence.cpp  facts.cpp  json.cpp  plan.cpp  serializers.cpp  source.cpp  transpiler.cpp  types.cpp
src/clang/: adapter.cpp
src/cpp/: modernization.cpp
tests/: run_cli_apply.cmake  run_compile_commands.cmake  run_textual_compile_commands.cmake  test_clang_adapter.cpp  test_core.cpp  test_cpp_modernisation.cpp  test_cpp_modernization.cpp
tests/fixtures/: legacy_modernisation.cpp  legacy_modernization.cpp
